Avijatrik Version 1


Theme Feature:
# Show post on home page From specific category
# Some category page shown on own Formatting
# all post have facebook Like, User can Easyly Like Anything using there Facebook Profile
# Customizable Menu
# customizable Header
# customizable Page
# Included own sitemap Page



17-06-2016
# added post thumbnail
# added post type support
# some bug fixed