@@ -1,6 +1,7 @@
 </div>
 </div>
 </div>
+
 <!-- Footer -->
 <footer class="container-fluid footer-bg">
 <div class="container">
