@@ -15,4 +15,12 @@ Theme Feature:
 17-06-2016
 # added post thumbnail
 # added post type support
+# Added Dynamic Meta data and dynamic title on header php
 # some bug fixed
+
+
+
+
+task
+open graph fixing needed
+twitter fixing needed
